--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,355 @@ table {
 
 
 /* Write your css below here */
+
+*{
+	box-sizing: border-box;
+}
+
+
+header{
+	width: 100%;
+	background-color: #FFF;
+	position: fixed;
+	padding: 15px;
+	display: flex;
+	min-height: 60px;
+	gap: 30px;
+	justify-content: space-between;
+}
+
+.header-left{
+	display: flex;
+	gap: 10px;
+	align-items: center;
+
+}
+
+.header-right{
+	display: flex;
+	align-items: center;
+}
+
+
+.head-img{
+	height: 25px;
+}
+
+#ye{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #0F1C70;
+	background-color: #dadef5;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+}
+
+.container{
+	padding: 100px 10px;
+}
+
+#search{
+	height: 25px;
+}
+
+.search{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+#sort{
+	background-color: #f1f1f1;
+	height: 40px;
+	width: 200px;
+	border-radius: 5px;
+	border: none;
+}
+
+#sort:hover{
+	font-weight: bold;
+}
+
+.box{
+	display: flex;
+	align-items: center;
+	padding-left: 5px;
+	border-radius: 5px;
+	background-color: #f1f1f1;
+	width: 236px;
+}
+
+.box input{
+	background-color:#f1f1f1 ;
+	height: 37px;
+	width: 200px;
+	border: none;
+}
+
+.top-main{
+	padding-top: 30px;
+	display: grid;
+	gap: 20px;
+	grid-template-columns: 1fr;
+	width: 100%;
+}
+
+.top1:hover{
+	transform:scale(1.05);
+}
+
+.top2:hover{
+	transform: scale(1.05);
+}
+
+.main{
+	/* border: 3px solid black; */
+	display: flex;
+	flex-direction: column;
+}
+
+.image1{
+	max-height: 500px;
+	width: 100%;
+	flex: 8;
+}
+
+.image1 img{
+	border-radius: 10px;
+	height: 100%;
+	width: 100%;
+}
+
+.text1{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	flex: 5;
+}
+
+.description{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.quantity{
+	display: flex;
+	align-items: center;
+	gap: 5px;
+}
+
+.minus{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50px;
+	height: 25px;
+	width: 25px;
+	background-color: #F2F2F2;
+	border: 2px solid lightgray;
+}
+
+.plus{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50px;
+	height: 25px;
+	width: 25px;
+	background-color: #F2F2F2;
+	border: 1px solid lightgray;
+}
+
+.bottom-main{
+	padding-top: 30px;
+	padding-bottom: 80px;
+	display: grid;
+	gap: 20px;
+	grid-template-columns: 1fr;
+	width: 100%;
+}
+
+.image2{
+	width: 100%;
+	flex: 8;
+}
+
+.bottom1:hover{
+	transform: scale(1.1);
+}
+
+.image2 img{
+	border-radius: 10px;
+		height: 100%;
+		width: 100%;
+}
+
+.reviews{
+	font-size: larger;
+	font-weight: bold;
+	display: flex;
+	height: 40px;
+	padding-top: 40px;
+}
+
+.reviews img{
+	height: 25px;
+
+}
+
+.star{
+	display: flex;
+}
+
+.summary{
+	padding-top: 40px;
+}
+
+.stars{
+	padding-top: 40px;
+	width: 100%;
+}
+
+.star hr{
+	border: 2px solid lightgray;
+	width: 80%;
+}
+
+.breakdown{
+	padding-top: 40px;
+}
+
+.rating{
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.value{
+	display: flex;
+}
+
+.value img{
+	height: 25px;
+}
+
+footer{
+	justify-content: space-between;
+	padding: 10px;
+	background-color: #F8F9FB;
+}
+
+.footer1{
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	padding-top: 100px;
+}
+
+.footer2{
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	padding-top: 100px;
+	padding-bottom: 50px;
+}
+
+.phone{
+	display: flex;
+}
+
+.phone img{
+	height: 25px;
+}
+
+@media screen and ( width >= 320px) {
+	.bottom-main{
+		grid-template-columns: 1fr 1fr;
+	}
+	
+}
+
+@media screen and (width >=480px) {
+	.search{
+		justify-content: space-between;
+		flex-direction: row;
+	
+}
+}
+
+
+@media screen and ( width >= 800px) {
+	.top-main{
+		grid-template-columns: 1fr 1fr;
+	}
+
+	.bottom-main{
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+
+	.bottom1{
+		padding-top: 20px;
+	}
+	
+}
+
+
+@media screen and (width >= 600px ) {
+	.container{
+		padding: 100px 60px;
+	}
+
+	footer{
+		padding: 10px 60px;
+	}
+
+	header{
+		padding: 15px 60px;
+	}
+
+	.text1{
+		flex-direction: row;
+		gap: 30px;
+		padding-top: 20px;
+	}
+	
+}
+
+@media screen and (width >= 1000px) {
+	footer{
+		display: flex;
+	}
+
+	.section-bottom{
+		display: grid;
+		grid-template-columns: 1fr 2fr 2fr;
+		gap: 30px;
+	}
+
+	
+
+	
+}
+
+
+@media screen and ( width >= 1200px) {
+	.bottom-main{
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
+
+	.container{
+		padding: 100px 200px;
+	}
+
+	footer{
+		padding: 10px 200px;
+	}
+
+	header{
+		padding: 15px 200px;
+	}
+	
+}
